added /api/ prefix to all endpoints
